# OpenGl

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cmake.yml
res/shaders/: basic.glsl
src/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
